proxy volume monitor: Don't leak the_volume_monitors hash table

The the_volume_monitors hash table is a shared global instance, make
sure to only initialize it once.

Based on a patch by Tim Lunn <tim@feathertop.org>

https://bugzilla.gnome.org/show_bug.cgi?id=689946